--- a/diapos/SRH_Assignment.tex
+++ b/diapos/SRH_Assignment.tex
@@ -1,4 +1,4 @@
-% Created 2018-04-02 lun 17:35
+% Created 2018-04-02 lun 17:46
 % Intended LaTeX compiler: pdflatex
 \documentclass[11pt]{article}
 \usepackage[utf8]{inputenc}
@@ -41,5 +41,5 @@
 \item Combine the satellite estimations at the location defined in step 4 with the result of that step, using spatial interpolation (IDW).
 \end{enumerate}
 
-\textbf{The result of step 6 will be used in Session \#2}.
+\textbf{The result of the last step will be used in Session \#2}.
 \end{document}
